--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
+    "react-use": "^14.2.0",
     "rimraf": "^3.0.2",
-    "semantic-ui-react": "^0.88.2",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.2",
