mobile and desktop

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,9 +1,9 @@
 [
   {
-    "title": "Helix",
-    "link": "https://fjlaubscher.github.io/helix",
-    "description": "Helix is an opinionated React boilerplate which tries to keep config to a minimum while allowing you to configure what you need. This site is built with Helix!",
-    "image": "/helix.jpg"
+    "title": "Valuation Wizard",
+    "link": "https://leadhome.co.za/valuation",
+    "description": "Online property valuation tool built at Leadhome using React + Redux.",
+    "image": "/valuation-wizard.jpg"
   },
   {
     "title": "Reactro",
@@ -12,9 +12,9 @@
     "image": "/reactro.jpg"
   },
   {
-    "title": "Valuation Wizard",
-    "link": "https://leadhome.co.za/valuation",
-    "description": "Online property valuation tool built at Leadhome using React + Redux.",
-    "image": "/valuation-wizard.jpg"
+    "title": "Helix",
+    "link": "https://fjlaubscher.github.io/helix",
+    "description": "Helix is an opinionated React project template which tries to keep config to a minimum while allowing you to configure what you need. This site is built with Helix!",
+    "image": "/helix.jpg"
   }
 ]
