--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@types/react-helmet": "^6.0.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/webpack-env": "^1.15.2",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.0",
     "classnames": "^2.2.6",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
@@ -40,26 +40,25 @@
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-use": "^14.2.0",
+    "react-use": "^15.1.0",
     "rimraf": "^3.0.2",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^7.0.4",
-    "typescript": "^3.9.2",
+    "source-map-loader": "^1.0.0",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "workbox-webpack-plugin": "^5.1.3"
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5",
     "webpack-dev-server": "^3.11.0"
   }
