--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --progress --config webpack/dev.config.js",
     "prebuild": "npm run clean",
     "build": "webpack --mode production --config webpack/config.js",
+    "postbuild": "react-snap",
     "clean": "rimraf build",
     "lint": "eslint src --ext .tsx,.ts"
   },
@@ -38,7 +39,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-use": "^15.1.0",
     "rimraf": "^3.0.2",
@@ -60,6 +60,8 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5",
+    "react-snap": "^1.23.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
