--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   "author": "Francois Laubscher",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
     "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.35",
@@ -26,6 +33,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/webpack-env": "^1.15.2",
     "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
@@ -35,15 +43,15 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-use": "^15.1.0",
     "rimraf": "^3.0.2",
-    "source-map-loader": "^1.0.0",
-    "ts-loader": "^7.0.5",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
