--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "webpack-dev-server --progress --config webpack/dev.config.js",
     "prebuild": "npm run clean",
     "build": "webpack --mode production --config webpack/config.js",
-    "postbuild": "react-snap",
     "clean": "rimraf build",
     "lint": "eslint src",
     "typecheck": "tsc"
@@ -19,14 +18,6 @@
   "author": "Francois Laubscher",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.2.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-use": "^15.3.0"
-  },
-  "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
@@ -45,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "babel-loader": "^8.1.0",
+    "classnames": "^2.2.6",
     "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.6.0",
     "dotenv": "^8.2.0",
@@ -59,7 +51,12 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-refresh": "^0.8.3",
+    "react-use": "^15.3.0",
     "rimraf": "^3.0.2",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
