--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: production
+      VERSION: 1.1.2
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
