--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       env:
         DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
       with:
-        flags: '-avc --delete'
+        flags: '--delete'
         src: 'build/'
         dest: 'root@"${{secrets.SERVER_IP}}":/var/www/website'
 
