--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "prerender-spa-plugin": "^3.4.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^3.10.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-use": "^15.3.0",
