--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: production
-      VERSION: 1.2.0
+      VERSION: 2.0.0
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
       with:
-        node-version: 12
+        node-version: 14
     - run: sudo apt-get install rsync
-    - run: npm install
-    - run: npm run lint
-    - run: npm run typecheck
-    - run: npm run build
+    - run: npm install -g yarn
+    - run: yarn install
+    - run: yarn lint
+    - run: yarn typecheck
+    - run: yarn build
     - run: npx react-snap
     - name: rsync-deploy
       uses: Pendect/action-rsyncer@v1.1.0
