--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "none"
+  "printWidth": 100,
+  "trailingComma": "none",
+  "endOfLine": "auto"
 }
