--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "PWA react boilerplate",
   "main": "src/index.tsx",
   "scripts": {
-    "start": "webpack serve --progress --config webpack/dev.config.js",
-    "prebuild": "npm run clean",
-    "build": "webpack --mode production --config webpack/config.js",
+    "start": "vite",
+    "build": "tsc && vite build",
     "clean": "rimraf build",
-    "lint": "eslint src",
-    "typecheck": "tsc"
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "lint": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -17,54 +17,26 @@
   },
   "author": "Francois Laubscher",
   "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
-    "@svgr/webpack": "^5.5.0",
-    "@types/classnames": "^2.2.11",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "babel-loader": "^8.2.2",
-    "classnames": "^2.2.6",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
-    "dotenv": "^8.2.0",
-    "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
-    "mini-css-extract-plugin": "^1.3.4",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
-    "react-refresh": "^0.8.3",
-    "react-router-dom": "^5.2.0",
-    "react-use": "^15.3.8",
+  "devDependencies": {
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.4",
+    "@vitejs/plugin-react": "^1.1.0",
+    "prettier": "^2.5.0",
+    "react-refresh": "^0.11.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.32.4",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.2"
+    "sass": "^1.44.0",
+    "typescript": "^4.5.2",
+    "vite": "^2.6.14"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.17.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.0.2",
+    "react-use": "^17.3.1"
   }
 }
