--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
     - run: yarn lint
     - run: yarn typecheck
     - run: yarn build
+    - run: npx react-snap
     - name: rsync-deploy
       uses: Pendect/action-rsyncer@v1.1.0
       env:
