--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "clean": "rimraf build",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{ts,tsx}\"",
-    "typecheck": "tsc --noEmit",
     "preview": "vite preview"
   },
   "repository": {
@@ -18,6 +15,9 @@
   },
   "author": "Francois Laubscher",
   "license": "MIT",
+  "resolutions": {
+    "puppeteer": "^13"
+  },
   "devDependencies": {
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
@@ -39,5 +39,12 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-use": "^17.3.2"
+  },
+  "reactSnap": {
+    "source": "./dist",
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ]
   }
 }
